{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Control",
            "id": "26e30a52-ef73-4d95-b373-8b3715622f84",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "ad8f70fa-d01b-40ab-91fb-8d10420e5d4b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "e5075f18-09fc-47ca-b680-2c872021b423",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "0d5cbaea-9af2-433b-ba6d-ac62896c7b7d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SkillWeapon",
                    "type": "Button",
                    "id": "d9107f69-f35f-49e8-869e-cd2af76cdf4d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "AbilityWeapon",
                    "type": "Button",
                    "id": "1f0f0265-1d03-4768-9170-81c9e8653458",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Equip/Unequip",
                    "type": "Button",
                    "id": "949822f0-c4cb-4a19-b25d-e001bd023ba9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "fcf460e8-3dbd-4395-9168-59ea75aa8e2d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interactor",
                    "type": "Button",
                    "id": "106ad23f-42aa-41c6-8b43-12d5edd90231",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "12aa63d1-c26d-4023-90d2-dd050b6dc801",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8346b56b-3cd3-4f3a-b7b8-515b4f0c896a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "722e57a8-6238-4704-865c-b3810931d292",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "48c41861-9dc0-4ca6-9875-352fdd3e6d4f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "cb8792f2-cfe9-469c-a113-9f0b472e5018",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b10e2c85-2dd3-422e-a0fc-89733bc7205c",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dbbf1022-a888-4bf7-bd99-026cabfd0549",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1def900-e854-4b1e-ba69-11c81ae7e12e",
                    "path": "<Keyboard>/#(E)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkillWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65c4657d-0108-4172-8d51-42e9698a550a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbilityWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9575b604-6b19-4555-a72a-0294a5a097b2",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Equip/Unequip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b84ea50c-0b20-46d3-82a6-b5956d44254c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "58930905-0777-40c3-8056-11f842ee6c2e",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interactor",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}